apps/komga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: web
  selector:
    app: komga
  sessionAffinity: None
  type: ClusterIP
